{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 134,
  "lineage": "1ebc92c9-cdc0-b5d1-d46e-8a95605b32b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysqlec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:964745870063:instance/i-0ca52f8377a2e43a3",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca52f8377a2e43a3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e71603bf24954f7c",
            "private_dns": "ip-192-168-2-199.ap-south-1.compute.internal",
            "private_ip": "192.168.2.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a046c411650e1313",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0993ec8d16789aebe",
            "tags": {
              "Name": "mysqlec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b8253b3b4cd8235"
            ]
          },
          "dependencies": [
            "aws_security_group.private-sg",
            "aws_subnet.subnet-1a-private",
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpressec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08706cb5f68222d09",
            "arn": "arn:aws:ec2:ap-south-1:964745870063:instance/i-0d417705983c9ff78",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d417705983c9ff78",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2079c8e9630b549",
            "private_dns": "ip-192-168-1-184.ap-south-1.compute.internal",
            "private_ip": "192.168.1.184",
            "public_dns": "ec2-13-232-100-170.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.100.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04339b6d982b6711a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-050540ee9935229bb",
            "tags": {
              "Name": "wordpressec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0158356e2cc2f19d0"
            ]
          },
          "dependencies": [
            "aws_security_group.public-sg",
            "aws_subnet.subnet-1a-public",
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "task-3-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:internet-gateway/igw-027eeb470778b2622",
            "id": "igw-027eeb470778b2622",
            "owner_id": "964745870063",
            "tags": {
              "Name": "My task -3 VPC Internet Gateway"
            },
            "vpc_id": "vpc-038b34b443fbdd912"
          },
          "dependencies": [
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a35dc4dda4300bf0",
            "owner_id": "964745870063",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027eeb470778b2622",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table"
            },
            "vpc_id": "vpc-038b34b443fbdd912"
          },
          "dependencies": [
            "aws_internet_gateway.task-3-igw",
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f184196ab9f6fba",
            "route_table_id": "rtb-0a35dc4dda4300bf0",
            "subnet_id": "subnet-050540ee9935229bb"
          },
          "dependencies": [
            "aws_internet_gateway.task-3-igw",
            "aws_route_table.route-table",
            "aws_subnet.subnet-1a-public",
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:security-group/sg-08b8253b3b4cd8235",
            "description": "private Mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b8253b3b4cd8235",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from mysql",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-sg",
            "name_prefix": null,
            "owner_id": "964745870063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "private Mysql",
              "Name": "private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038b34b443fbdd912"
          },
          "dependencies": [
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:security-group/sg-0158356e2cc2f19d0",
            "description": "public wordpress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0158356e2cc2f19d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-sg",
            "name_prefix": null,
            "owner_id": "964745870063",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "public wordpress",
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-038b34b443fbdd912"
          },
          "dependencies": [
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1a-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:subnet/subnet-0993ec8d16789aebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0993ec8d16789aebe",
            "map_public_ip_on_launch": false,
            "owner_id": "964745870063",
            "tags": {
              "Name": "subnet-1b-private"
            },
            "vpc_id": "vpc-038b34b443fbdd912"
          },
          "dependencies": [
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1a-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:subnet/subnet-050540ee9935229bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-050540ee9935229bb",
            "map_public_ip_on_launch": true,
            "owner_id": "964745870063",
            "tags": {
              "Name": "subnet-1a-public"
            },
            "vpc_id": "vpc-038b34b443fbdd912"
          },
          "dependencies": [
            "aws_vpc.task-3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:964745870063:vpc/vpc-038b34b443fbdd912",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0144f1030fee8b126",
            "default_route_table_id": "rtb-0f445cc1febed7a43",
            "default_security_group_id": "sg-0fe339d145235702b",
            "dhcp_options_id": "dopt-6c9f6407",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038b34b443fbdd912",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f445cc1febed7a43",
            "owner_id": "964745870063",
            "tags": {
              "Name": "task-3"
            }
          }
        }
      ]
    }
  ]
}